--- a/src/app.css
+++ b/src/app.css
@@ -11,7 +11,7 @@
         --foreground: 222.2 84% 4.9%;
         --muted: 210 40% 96.1%;
         --muted-foreground: 215.4 16.3% 46.9%;
-        --accent: 45 100% 59%;
+        --accent: 45 100% 50%;;
         --accent-foreground: 222.2 47.4% 11.2%;
         --popover: 0 0% 100%;
         --popover-foreground: 222.2 84% 4.9%;
