--- a/src/app.css
+++ b/src/app.css
@@ -1,9 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,600;1,600&family=Roboto+Condensed:ital,wght@0,700;1,700&family=Roboto+Flex:opsz,wght@8..144,500&family=Roboto:wght@400;500;700;900&display=swap');
 @import url('https://fonts.cdnfonts.com/css/verdana-pro-cond?styles=16481,16465');
 
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss";
+@config "../tailwind.config.js";
 
 @layer base {
     :root {
@@ -149,22 +148,33 @@
 
     h1 {
         @apply text-4xl sm:text-5xl lg:text-6xl 2xl:text-7xl leading-tight;
-        @apply roboto-condensed;
+        font-family: "Roboto Condensed", sans-serif;
+        font-optical-sizing: auto;
+        font-weight: 700;
+        font-style: normal;
         @apply uppercase leading-snug md:leading-tight;
     }
 
     h2 {
         @apply text-lg md:text-xl lg:text-2xl;
-        @apply roboto-flex-medium
+        font-family: "Roboto Flex", sans-serif;
+        font-optical-sizing: auto;
+        font-weight: 500;
+        font-style: normal;
+        font-variation-settings: "slnt" 0, "wdth" 100, "GRAD" 0, "XOPQ" 96, "XTRA" 468, "YOPQ" 79, "YTAS" 750, "YTDE" -203, "YTFI" 738, "YTLC" 514, "YTUC" 712;
     }
 
     h3 {
         @apply text-3xl lg:text-4xl;
-        @apply roboto-black
+        font-family: "Roboto", sans-serif;
+        font-weight: 900;
+        font-style: normal;
     }
     p {
         @apply text-sm sm:text-base md:text-lg;
-        @apply roboto-regular;
+        font-family: "Roboto", sans-serif;
+        font-weight: 400;
+        font-style: normal;
         @apply mb-4
     }
 
@@ -173,24 +183,36 @@
     }
 
     #logo span {
-        @apply josefin-sans;
+        font-family: "Josefin Sans", sans-serif;
+        font-optical-sizing: auto;
+        font-weight: 600;
+        font-style: normal;
         @apply leading-4;
     }
 
     #btn-cta {
         @apply uppercase;
         @apply text-xl;
-        @apply verdana-pro-bold;
+        font-family: 'Verdana Pro', sans-serif;
+        font-optical-sizing: auto;
+        font-weight: 700;
+        font-style: normal;
     }
 
     #links a {
         @apply uppercase;
-        @apply verdana-pro;
+        font-family: 'Verdana Pro SemiBold', sans-serif;
+        font-optical-sizing: auto;
+        font-weight: 600;
+        font-style: normal;
 
     }
 
     #cassidy h3 {
-        @apply verdana-pro;
+        font-family: 'Verdana Pro SemiBold', sans-serif;
+        font-optical-sizing: auto;
+        font-weight: 600;
+        font-style: normal;
         @apply leading-4
     }
     #cassidy h3 span:first-child {
@@ -202,8 +224,4 @@
     #cassidy h3 span:last-child {
         @apply text-xl;
     }
-
-
-
-
 }
